--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-battery = "0.7.8"
 chrono = "0.4.34"
+inotify = "0.10.2"
 libc = "0.2.153"
